// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BallBeat> mount to match snapshot: enzyme.mount 1`] = `
.css-17rbjo5 > div,
[data-css-17rbjo5] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_1twcfwm 0.7s 0s infinite linear;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1twcfwm 0.7s 0s infinite linear;
}

.css-17rbjo5 > div:nth-child(2n-1),
[data-css-17rbjo5] > div:nth-child(2n-1) {
  animation-delay: -0.35s !important;
  -webkit-animation-delay: -0.35s !important;
}

<BallBeat
  loading={true}
>
  <div
    data-css-17rbjo5=""
  >
    <div />
    <div />
    <div />
  </div>
</BallBeat>
`;

exports[`<BallBeat> render to match snapshot: enzyme.render 1`] = `
.css-17rbjo5 > div,
[data-css-17rbjo5] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_1twcfwm 0.7s 0s infinite linear;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1twcfwm 0.7s 0s infinite linear;
}

.css-17rbjo5 > div:nth-child(2n-1),
[data-css-17rbjo5] > div:nth-child(2n-1) {
  animation-delay: -0.35s !important;
  -webkit-animation-delay: -0.35s !important;
}

<div
  data-css-17rbjo5=""
>
  <div />
  <div />
  <div />
</div>
`;

exports[`<BallBeat> shallow to match snapshot: enzyme.shallow 1`] = `
.css-17rbjo5 > div,
[data-css-17rbjo5] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  animation: animation_1twcfwm 0.7s 0s infinite linear;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1twcfwm 0.7s 0s infinite linear;
}

.css-17rbjo5 > div:nth-child(2n-1),
[data-css-17rbjo5] > div:nth-child(2n-1) {
  animation-delay: -0.35s !important;
  -webkit-animation-delay: -0.35s !important;
}

<div
  data-css-17rbjo5=""
>
  <div />
  <div />
  <div />
</div>
`;
